--- a/bp_projects/templates/bp_projects/portfolio.html
+++ b/bp_projects/templates/bp_projects/portfolio.html
@@ -5,3 +5,19 @@
 {% set project = "Portfolio" %}
 {% set overview = "https://nighthawkcodingsociety.com/projectsearch/details/Flask%20Portfolio%20Starter" %}
 {% set repo = "https://github.com/nighthawkcoders/flask_portfolio/" %}
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport", content="width=device-width, initial-scale=1.0">
+        <title>Snake</title>
+        <link rel="stylesheet" href="snake.css">
+        <script src="snake.js"></script>
+    </head>
+    <body>
+        <h1>Snake</h1>
+        <canvas id="board"></canvas>
+    </body>
+</html>
