--- a/bp_projects/templates/bp_projects/portfolio.html
+++ b/bp_projects/templates/bp_projects/portfolio.html
@@ -1,5 +1,7 @@
 <!-- Extending the project layout, as this file will do minor customizations -->
 {% extends "layouts/portfolio.html" %}
+{% extends "layouts/snake.css" %}
+{% extends "layouts/snake.js" %}
 
 <!-- Setting up variables to customize "project" details to be specific to index page -->
 {% set project = "Portfolio" %}
