--- a/templates/index.html
+++ b/templates/index.html
@@ -130,12 +130,21 @@ form input{
                     </div>
                     <p class="item-data">Calories: 120</p>
                 </div>
-            <div class="search-result">
-                <div class="item">
-                    <img src="{{ url_for('static', filename='assets/pizza.png') }}" alt="">
-                    <div class="flex-containter">
-                        <h1 class="title">This is a recipe</h1>
-                        <a class="view-button" href="#">View Recipe</a>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <img class="card-img-top" src="{{ url_for('static', filename='assets/flask.png') }}" alt="Flask Development" height="250">
+                    <div class="card-body">
+                    <h5 class="card-title">What is <mark>waxmoo</mark>? How do I start Web development?</h5>
+                    <p class="card-text">
+                        <ol>
+                            <li>Flask Framework is the popular Web Application development framework of Python.</li>
+                            <li>Max Wu</li>
+                            <li>mmmmmmmm</li>
+                            <li>Jinja2 is a server-side Python like template engine, supports HTML5 web development, and provides full integration with Flask.</li>
+                        </ol>
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                     <p class="item-data">Calories: 120</p>
                 </div>
