--- a/bp_projects/templates/bp_projects/portfolio.html
+++ b/bp_projects/templates/bp_projects/portfolio.html
@@ -8,3 +8,4 @@
 {% set repo = "https://github.com/nighthawkcoders/flask_portfolio/" %}
 
 
+<canvas id="gameCanvas" width="1000" height="1000"></canvas>
