--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,9 @@
 <div class="search-box">
     <input class="search-txt" type="text" name="" placeholder="Type to search">
     <a class="search-btn" href="#">
-        
+
     </a>
 </div>
     </body>
 </html>
+{% endblock %}
