--- a/templates/index.html
+++ b/templates/index.html
@@ -16,28 +16,28 @@
             </form>
             <div class="search-result">
                 <div class="item">
-                    <img src="./ncs_logo.png" alt="">
+                    <img src="./pizza.png" alt="">
                     <div class="flex-containter">
                         <h1 class="title">This is a recipe</h1>
-                        <a href="#">View Recipe</a>
+                        <a class="view-button" href="#">View Recipe</a>
                     </div>
                     <p class="item-data">Calories: 120</p>
                 </div>
             <div class="search-result">
                 <div class="item">
-                    <img src="./ncs_logo.png" alt="">
+                    <img src="./pizza.png" alt="">
                     <div class="flex-containter">
                         <h1 class="title">This is a recipe</h1>
-                        <a href="#">View Recipe</a>
+                        <a class="view-button" href="#">View Recipe</a>
                     </div>
                     <p class="item-data">Calories: 120</p>
                 </div>
             <div class="search-result">
                  <div class="item">
-                    <img src="./ncs_logo.png" alt="">
+                    <img src="./pizza.png" alt="">
                     <div class="flex-containter">
                         <h1 class="title">This is a recipe</h1>
-                        <a href="#">View Recipe</a>
+                        <a class="view-button" href="#">View Recipe</a>
                     </div>
                     <p class="item-data">Calories: 120</p>
                     </div>
