--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Recipe</title>
 </head>
 
+
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -19,10 +19,9 @@ img{
     width: 100%;
     height: 100%;
     object-fit:cover;
-
 } 
 html{
-    font-family: 'Roboto';
+    font-family: 'Open Sans';
     font-size: 12px;
     font-weight: 600;
 }
@@ -74,7 +73,7 @@ form input{
 .item{
     width: 100%;
     border-radius: 8px;
-    background-color: blanchedalmond;
+    background-color: rgb(242, 255, 205);
     padding: 15px;
     overflow: hidden;
 }
@@ -89,7 +88,7 @@ form input{
     justify-content: space-between;
 }
 .item .title{
-    color: rgb(0, 0, 0);
+    color: rgb(25, 37, 210);
     margin: 20px 10px 0 0;
     font-size: 1.8rem;
     font-weight: 400;
@@ -105,51 +104,87 @@ form input{
     align-self: flex-start;
 }
 .item-data{
-    color: rgb(0, 0, 0);
+    color: rgba(30, 29, 29, 0.866);
     display: block;
     margin-top: 10px;
     font-size: 1.4rem;
     letter-spacing: .05 rem;
     line-height: 2rem;
 }
+.container.initial .brand{
+    font-size: 5rem;
+}
+.container.initial form{
+    max-width: 600px;
+}
+.container.initial form input{
+    padding: 20px;
+    font-size: 3rem;
+}
 </style>
+
 
 <body>
     <section>
-        <div class = "containter">
-            <h1 class="brand">Recipe App</h1>
+        <div class = "container initial">
+            <h1 class="brand">What do you want to cook today?</h1>
             <form>
-                <input type="text" placeholder="Search Your Recipe...">
+                <input type="text" placeholder="Type recipe... ex. pizza">
             </form>
             <div class="search-result">
-                <div class="item">
-                    <img src="{{ url_for('static', filename='assets/pizza.png') }}" alt="">
-                    <div class="flex-containter">
-                        <h1 class="title">This is a recipe</h1>
-                        <a class="view-button" href="#">View Recipe</a>
-                    </div>
-                    <p class="item-data">Calories: 120</p>
-                </div>
-            <div class="search-result">
-                <div class="item">
-                    <img src="{{ url_for('static', filename='assets/pizza.png') }}" alt="">
-                    <div class="flex-containter">
-                        <h1 class="title">This is a recipe</h1>
-                        <a class="view-button" href="#">View Recipe</a>
-                    </div>
-                    <p class="item-data">Calories: 120</p>
-                </div>
-            <div class="search-result">
-                 <div class="item">
-                    <img src="{{ url_for('static', filename='assets/pizza.png') }}" alt="">
-                    <div class="flex-containter">
-                        <h1 class="title">This is a recipe</h1>
-                        <a class="view-button" href="#">View Recipe</a>
-                    </div>
-                    <p class="item-data">Calories: 120</p>
-                    </div>
             </div>
         </div>
-    </section>
+    <section>
+    
+    <script>
+        // Font api from google
+        //https://fonts.google.com/
+
+        // Recipe API from edamam 
+        //https://www.edamam.com/
+
+        const searchForm = document.querySelector('form');
+        const searchResultDiv = document.querySelector('.search-result');
+        const container = document.querySelector('.container');
+        let searchQuery = '';
+        
+        // get user input
+        searchForm.addEventListener('submit', (e) => {
+            e.preventDefault(); 
+            searchQuery = e.target.querySelector('input').value;
+            console.log(searchQuery)    
+            fetchAPI();
+        });
+        
+        // get results from edamam.com
+        async function fetchAPI(){        
+            const baseURL = `https://api.edamam.com/api/recipes/v2?type=public&q=${searchQuery}&app_id=449337d0&app_key=aef635a70d74e161040e5860d97c9ab6`;
+            const response = await fetch(baseURL);
+            const data = await response.json();                            
+            console.log(data)
+            generateHTML(data.hits);    
+        }
+        
+        // prepare HTML using results
+        function generateHTML(results){
+            container.classList.remove('initial');
+            let generatedHTML = '';
+            results.map(result => {
+                generatedHTML +=
+                `
+                <div class="item">
+                    <img src="${result.recipe.image}" alt="">
+                        <div class="flex-containter">
+                            <a class="view-button" href="${result.recipe.url}" target="_blank"><h1 class="title"><b>${result.recipe.label}</b></h1></a>
+                        </div>
+                    <p class="item-data">Calories: ${result.recipe.calories.toFixed(0)}</p>
+                    <p class="item-data">Diet: ${result.recipe.dietLabels.length > 0 ? result.recipe.dietLabels : 'No data'}</p>
+                    <p class="item-data">Ingredient: ${result.recipe.ingredientLines}</p>
+                </div>            
+                `
+            })
+            searchResultDiv.innerHTML = generatedHTML;
+        }
+        </script>
 </body>
 </html>
