--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,6 @@ form input{
 .item{
     width: 100%;
     border-radius: 8px;
-    background-color: rgb(221, 185, 131);
     padding: 15px;
     overflow: hidden;
 }
@@ -124,6 +123,7 @@ form input{
 
 
 <body>
+    <p style="background-image: url('seamless-pattern-with-kitchen-tools-cooking-utensils-background-pattern-with-kitchen-accessories-equipment-utensils-background-for-restaurant-menu-textile-wallpapers-illustration-vector.jpg');">   
     <section>
         <div class = "container initial">
             <h1 class="brand">What do you want to cook today?</h1>
