--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<style>
+        body {
+          background-image: url('example_img_girl.jpg');
+        }
+</style>
+
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,6 +36,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgb(255, 183, 0);
     padding: 100px 0;
 
 }
