--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<style>
-        body {
-          background-image: url('example_img_girl.jpg');
-        }
-</style>
+    <!DOCTYPE html>
+    <html>
+    <head>
+    <style>
+    body {
+      background-image: url('seamless-pattern-with-kitchen-tools-cooking-utensils-background-pattern-with-kitchen-accessories-equipment-utensils-background-for-restaurant-menu-textile-wallpapers-illustration-vector.jpg');
+    }
+    </style>
+    </head>
+    <body>
 
 <head>
     <meta charset="UTF-8"> 
@@ -36,7 +41,6 @@ section{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(255, 183, 0);
     padding: 100px 0;
 
 }
