--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,12 @@
     <style>
     body {
       background-image: url('seamless-pattern-with-kitchen-tools-cooking-utensils-background-pattern-with-kitchen-accessories-equipment-utensils-background-for-restaurant-menu-textile-wallpapers-illustration-vector.jpg');
+      background-attachment: fixed;  
+      background-size: cover;
     }
     </style>
     </head>
     <body>
-
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,6 +42,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgb(255, 153, 0);
     padding: 100px 0;
 
 }
@@ -48,6 +50,7 @@ section{
     width: 90%;
     height: auto;
     max-width: 1200px;
+    
     margin: 0 auto;
 }
 .brand{
@@ -77,6 +80,7 @@ form input{
     width: 100%;
     display: grid;
     grid-gap: 25px;
+    background-color: rgb(255, 194, 101);
     grid-template: auto / repeat(auto-fit, minmax(300px, 1fr));
 }
 .item{
