--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <!DOCTYPE html>
-    <html>
-    <head>
-    <style>
-    body {
-      background-image: url('seamless-pattern-with-kitchen-tools-cooking-utensils-background-pattern-with-kitchen-accessories-equipment-utensils-background-for-restaurant-menu-textile-wallpapers-illustration-vector.jpg');
-      background-attachment: fixed;  
-      background-size: cover;
-    }
-    </style>
-    </head>
-    <body>
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,6 +8,9 @@
 </head>
 
 <style>
+body {
+  background-image: url("paper.gif");
+}
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 *{
     padding: 0;
