--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <style>
 body {
-  background-image: url("paper.gif");
+  background-image: url("seamless-pattern-with-kitchen-tools-cooking-utensils-background-pattern-with-kitchen-accessories-equipment-utensils-background-for-restaurant-menu-textile-wallpapers-illustration-vector.jpg");
 }
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 *{
@@ -127,8 +127,7 @@ form input{
 </style>
 
 
-<body>
-    <p style="background-image: url('seamless-pattern-with-kitchen-tools-cooking-utensils-background-pattern-with-kitchen-accessories-equipment-utensils-background-for-restaurant-menu-textile-wallpapers-illustration-vector.jpg');">   
+<body>  
     <section>
         <div class = "container initial">
             <h1 class="brand">What do you want to cook today?</h1>
